# Forest-Fire

./: .gitignore  PREGUNTAS.md  README.md  main.py  pyproject.toml
config/: settings.py  urls.py
simulation/: engine.py  models.py  serializers.py  urls.py  views.py  weather.py
simulation/migrations/: 0001_initial.py
templates/: index.html
